--- a/宴喜天地/hunqing.html
+++ b/宴喜天地/hunqing.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>宴喜天地</title>
+    <title>仿宴喜天地</title>
     <link rel="stylesheet" href="bs/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="swiper/swiper-5.3.6/package/css/swiper.min.css">
     <link rel="stylesheet" href="css/base.css">
